Sat Jan 24 18:17:51 GMT 2004 (njh)
----------------------------------
  * clamav-milter: Allow clamd server name as well as IPaddress in -s option

Sat Jan 24 17:45:40 GMT 2004 (njh)
----------------------------------
  * libclamav: Removed (incorrect) warning about uninitialised variable

Fri Jan 23 12:12:30 CET 2004 (tk)
---------------------------------
  * libclamav: added support for OLE2 / VBA streams scanning (!!), based on
	       code written by Trog <trog@uncon.org>. It may be enabled
	       with CL_OLE2 passed in options to cli_scandesc().
  * clamscan: support for OLE2 scanning is enabled by default and may be
	      disabled with --no-ole2
  * clamd: support for OLE2 scanning is disabled by default and may be enabled
	   with ScanOLE2 in clamav.conf.
  * clamd: included Darwin fix from Nigel

Fri Jan 23 10:50:51 GMT 2004 (njh)
----------------------------------
  * libclamav: Fixed memory leak in handling some multipart messages

Fri Jan 23 08:52:49 GMT 2004 (njh)
----------------------------------
  * libclamav: Add detection of uuencoded viruses in single part
	multipart/mixed files

Thu Jan 22 22:14:13 GMT 2004 (njh)
----------------------------------
  * libclamav: Prevent infinite recursion on broken uuencoded files

Wed Jan 21 09:38:01 CET 2004 (tk)
---------------------------------
  * sigtool: --list-sigs: list virus signature names from all databases.
	     Optionally it can list signatures from selected database
	     (--list-sigs=/path/to/database)

Tue Jan 20 11:34:38 CET 2004 (tk)
---------------------------------
  * clamd: new commands: SESSION, END: SESSION starts a clamd session and
	   allows to do multiple commands per TCP session. END closes the
	   session. Requested by Jim Ramsay <i.am*jimramsay.com>.

Fri Jan 16 07:39:55 CET 2004 (tk)
---------------------------------
  * freshclam: removed -c for --config-file (conflicted with -c for --checks).
	       Problem reported by Richard Stevenson <richard*endace.com>.
