@@ -88,7 +88,7 @@ int main(int argc, char **argv)
     	};
 
 
-    opt=(struct optstruct*) mmalloc(sizeof(struct optstruct));
+    opt=(struct optstruct*) mcalloc(1, sizeof(struct optstruct));
     opt->optlist = NULL;
 
     while(1) {
