@@ -42,7 +42,7 @@ Default: 1M
 \fBLogTime\fR
 Log time with each message.
 .br 
-Defayult: disabled.
+Default: disabled.
 .TP 
 \fBLogSyslog\fR
 Use system logger (can work together with LogFile).
