@@ -59,7 +59,7 @@ int main(int argc, char **argv)
     	};
 
 
-    opt=(struct optstruct*)mmalloc(sizeof(struct optstruct));
+    opt=(struct optstruct*)mcalloc(sizeof(struct optstruct));
     opt->optlist = NULL;
 
     while(1) {
