@@ -70,7 +70,7 @@ int main(int argc, char **argv)
 	perror("setrlimit");
 #endif
 
-    opt=(struct optstruct*)mmalloc(sizeof(struct optstruct));
+    opt=(struct optstruct*)mcalloc(sizeof(struct optstruct));
     opt->optlist = NULL;
 
     while(1) {
